source/stylesheets/globals/_layout.sass
*
  box-sizing: border-box

section
  padding: $section-padding-y $section-padding-x
  border-style: solid
  border-color: white
  border-width: 0 $section-border-width $section-border-width $section-border-width

.selfie
  background-color: #FFFBF3

  img
    mix-blend-mode: multiply
    opacity: .85

.intro
  border-top-width: $section-border-width

ul
  list-style-type: none
  margin-left: 0

.clearfix
  +clearfix

.case-title
  margin-bottom: $sp-base

.case-pictures
  margin-bottom: $sp-big

.p-top-0,
.cell.p-top-0
  padding-top: 0

.p-bottom-0,
.cell.p-bottom-0
  padding-bottom: 0

